# WindowsHELP

./: .gitignore  CERTIFICAT_VALIDATION.md  Cargo.toml  windowshelp_audit_patch.diff
scripts/: ui_smoke.ps1
src/: app.rs  config.rs  lib.rs  main.rs  monitor.rs  platform_windows.rs  process.rs  search.rs  theme.rs  thermal.rs
